<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (C) 2018 iFLYTEK CO.,LTD.
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/settings_background"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <android.support.constraint.Guideline
        android:id="@+id/start_margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.023" />

    <android.support.constraint.Guideline
        android:id="@+id/title_start_margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.078" />

    <android.support.constraint.Guideline
        android:id="@+id/top_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.133" />

    <ImageView
        android:id="@+id/close"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:background="?selectableItemBackgroundBorderless"
        android:src="@drawable/ic_previous_white_32dp"
        app:layout_constraintBottom_toBottomOf="@id/top_bar"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintHeight_percent="0.053"
        app:layout_constraintStart_toStartOf="@id/start_margin"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/title"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/about_iflyos"
        android:textColor="@android:color/white"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toBottomOf="@id/top_bar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent=".06"
        app:layout_constraintStart_toStartOf="@id/title_start_margin"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.constraint.Guideline
        android:id="@+id/left_margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".25" />

    <android.support.constraint.Guideline
        android:id="@+id/right_margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".75" />

    <android.support.constraint.Guideline
        android:id="@+id/top_margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".197" />

    <android.support.v7.widget.AppCompatTextView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_centerVertical="true"
        android:text="@string/xiaofei_online"
        android:textColor="@android:color/white"
        app:autoSizeTextType="uniform"
        app:layout_constraintEnd_toEndOf="@id/right_margin"
        app:layout_constraintHeight_percent=".05"
        app:layout_constraintStart_toStartOf="@id/left_margin"
        app:layout_constraintTop_toTopOf="@id/top_margin" />

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/change_binding"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="end|center_vertical"
        android:text="@string/change_binding"
        android:textColor="#1784E9"
        app:autoSizeMinTextSize="6sp"
        app:autoSizeTextType="uniform"
        app:layout_constraintDimensionRatio="64:24"
        app:layout_constraintEnd_toStartOf="@id/right_margin"
        app:layout_constraintHeight_percent=".04"
        app:layout_constraintTop_toBottomOf="@id/top_margin" />

    <View
        android:id="@+id/divider"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="20dp"
        android:background="#1effffff"
        app:layout_constraintEnd_toEndOf="@id/right_margin"
        app:layout_constraintStart_toStartOf="@id/left_margin"
        app:layout_constraintTop_toBottomOf="@id/change_binding" />

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/tv_version"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        android:text="@string/system_version"
        android:textColor="@android:color/white"
        app:autoSizeTextType="uniform"
        app:layout_constraintEnd_toEndOf="@id/right_margin"
        app:layout_constraintHeight_percent=".05"
        app:layout_constraintStart_toStartOf="@id/left_margin"
        app:layout_constraintTop_toBottomOf="@id/divider" />

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/system_version"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="4dp"
        android:alpha="0.5"
        android:textColor="@android:color/white"
        app:autoSizeTextType="uniform"
        app:layout_constraintEnd_toEndOf="@id/right_margin"
        app:layout_constraintHeight_percent=".04"
        app:layout_constraintStart_toStartOf="@id/left_margin"
        app:layout_constraintTop_toBottomOf="@id/tv_version"
        tools:text="1.0.0" />

</android.support.constraint.ConstraintLayout>