<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (C) 2018 iFLYTEK CO.,LTD.
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.constraint.Guideline
        android:id="@+id/start_margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.053" />

    <android.support.constraint.Guideline
        android:id="@+id/top_margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.037" />

    <android.support.constraint.Guideline
        android:id="@+id/body_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.2" />

    <android.support.constraint.Guideline
        android:id="@+id/bottom_bar_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.88" />

    <android.support.constraint.Guideline
        android:id="@+id/body_bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.757" />

    <android.support.v7.widget.AppCompatTextView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/bind_iflyos_account"
        android:textColor="@android:color/white"
        app:autoSizeTextType="uniform"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent=".06"
        app:layout_constraintStart_toStartOf="@id/start_margin"
        app:layout_constraintTop_toTopOf="@id/top_margin" />

    <FrameLayout
        android:id="@+id/loading"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.467"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/body_top"
        tools:visibility="gone">

        <ProgressBar
            android:id="@+id/loading_progress"
            style="@style/Widget.AppCompat.ProgressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:indeterminateTint="#4e4f53" />

    </FrameLayout>

    <ImageView
        android:id="@+id/code"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="centerInside"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.467"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/body_top"
        tools:ignore="ContentDescription" />

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/tv_tips"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:text="@string/pairing_tips"
        android:textColor="#b3ffffff"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toBottomOf="@id/body_bottom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent=".05"
        app:layout_constraintStart_toStartOf="parent"
        tools:visibility="gone" />

    <android.support.constraint.ConstraintLayout
        android:id="@+id/failed"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.constraint.Guideline
            android:id="@+id/failed_top"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.26" />

        <android.support.constraint.Guideline
            android:id="@+id/retry_bottom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.813" />

        <ImageView
            android:id="@+id/iv_warning"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:src="@drawable/ic_error_white_208dp"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent=".347"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/failed_top" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/tv_bind_error"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:text="@string/binding_failed"
            android:textColor="@android:color/white"
            android:textSize="28sp"
            app:autoSizeTextType="uniform"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.08"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_warning"
            app:layout_constraintWidth_percent="0.188" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/error"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:maxWidth="600dp"
            android:textColor="#b3ffffff"
            android:textSize="20sp"
            app:autoSizeTextType="uniform"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.056"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_bind_error"
            app:layout_constraintWidth_percent="0.384"
            tools:text="点击重试或者返回上一步重新连接 Wi-Fi" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/retry"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:text="重试"
            android:textColor="@color/setup_primary"
            app:autoSizeMinTextSize="6sp"
            app:autoSizeTextType="uniform"
            app:layout_constraintBottom_toBottomOf="@id/retry_bottom"
            app:layout_constraintDimensionRatio="64:30"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.05"
            app:layout_constraintStart_toStartOf="parent" />

    </android.support.constraint.ConstraintLayout>

    <View
        style="@style/SetupWidget.BottomDivider"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent="0.0016"
        app:layout_constraintTop_toTopOf="@id/bottom_bar_top" />

    <ImageButton
        android:id="@+id/back"
        style="@style/SetupWidget.BottomButton.Back"
        android:layout_width="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintHeight_percent="0.053"
        app:layout_constraintStart_toStartOf="@id/start_margin"
        app:layout_constraintTop_toBottomOf="@id/bottom_bar_top" />

</android.support.constraint.ConstraintLayout>
